// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SitemapGenerator module should run without errors 1`] = `
Array [
  "<?xml version=\\"1.0\\"?><urlset xmlns=\\"http://www.sitemaps.org/schemas/sitemap/0.9\\" xmlns:image=\\"http://www.google.com/schemas/sitemap-image/1.1\\" xmlns:video=\\"http://www.google.com/schemas/sitemap-video/1.1\\"><url><loc>foo</loc></url><url><loc>bar</loc></url></urlset>",
  "<?xml version=\\"1.0\\"?><urlset xmlns=\\"http://www.sitemaps.org/schemas/sitemap/0.9\\" xmlns:image=\\"http://www.google.com/schemas/sitemap-image/1.1\\" xmlns:video=\\"http://www.google.com/schemas/sitemap-video/1.1\\"><url><loc>qak</loc></url><url><loc>Brrrr</loc></url></urlset>",
  "<?xml version=\\"1.0\\"?><urlset xmlns=\\"http://www.sitemaps.org/schemas/sitemap/0.9\\" xmlns:image=\\"http://www.google.com/schemas/sitemap-image/1.1\\" xmlns:video=\\"http://www.google.com/schemas/sitemap-video/1.1\\"><url><loc>rrrbbbbB</loc></url><url><loc>aksjaskjf</loc></url></urlset>",
]
`;

exports[`SitemapGenerator module should run without errors 2`] = `
Array [
  "<?xml version=\\"1.0\\"?><urlset xmlns=\\"http://www.sitemaps.org/schemas/sitemap/0.9\\" xmlns:image=\\"http://www.google.com/schemas/sitemap-image/1.1\\" xmlns:video=\\"http://www.google.com/schemas/sitemap-video/1.1\\"><url><loc>foo</loc></url><url><loc>bar</loc></url></urlset>",
  "<?xml version=\\"1.0\\"?><urlset xmlns=\\"http://www.sitemaps.org/schemas/sitemap/0.9\\" xmlns:image=\\"http://www.google.com/schemas/sitemap-image/1.1\\" xmlns:video=\\"http://www.google.com/schemas/sitemap-video/1.1\\"><url><loc>qak</loc></url><url><loc>rrrbbbbB</loc></url></urlset>",
  "<?xml version=\\"1.0\\"?><urlset xmlns=\\"http://www.sitemaps.org/schemas/sitemap/0.9\\" xmlns:image=\\"http://www.google.com/schemas/sitemap-image/1.1\\" xmlns:video=\\"http://www.google.com/schemas/sitemap-video/1.1\\"><url><loc>aksjaskjf</loc></url></urlset>",
]
`;

exports[`SitemapGenerator module should run without errors 3`] = `
Array [
  "<?xml version=\\"1.0\\"?><urlset xmlns=\\"http://www.sitemaps.org/schemas/sitemap/0.9\\" xmlns:image=\\"http://www.google.com/schemas/sitemap-image/1.1\\" xmlns:video=\\"http://www.google.com/schemas/sitemap-video/1.1\\"><url><loc>foo</loc></url><url><loc>bar</loc></url></urlset>",
  "<?xml version=\\"1.0\\"?><urlset xmlns=\\"http://www.sitemaps.org/schemas/sitemap/0.9\\" xmlns:image=\\"http://www.google.com/schemas/sitemap-image/1.1\\" xmlns:video=\\"http://www.google.com/schemas/sitemap-video/1.1\\"><url><loc>qak</loc></url></urlset>",
]
`;

exports[`SitemapGenerator module should run without errors 4`] = `
Array [
  "<?xml version=\\"1.0\\"?><urlset xmlns=\\"http://www.sitemaps.org/schemas/sitemap/0.9\\" xmlns:image=\\"http://www.google.com/schemas/sitemap-image/1.1\\" xmlns:video=\\"http://www.google.com/schemas/sitemap-video/1.1\\"><url><loc>Brrrr</loc></url></urlset>",
]
`;

exports[`SitemapGenerator module should run without errors 5`] = `
Array [
  "<?xml version=\\"1.0\\"?><urlset xmlns=\\"http://www.sitemaps.org/schemas/sitemap/0.9\\" xmlns:image=\\"http://www.google.com/schemas/sitemap-image/1.1\\" xmlns:video=\\"http://www.google.com/schemas/sitemap-video/1.1\\"><url><loc>rrrbbbbB</loc></url><url><loc>aksjaskjf</loc></url></urlset>",
]
`;

exports[`SitemapGenerator module should run without errors 6`] = `
Array [
  "<?xml version=\\"1.0\\"?><urlset xmlns=\\"http://www.sitemaps.org/schemas/sitemap/0.9\\" xmlns:image=\\"http://www.google.com/schemas/sitemap-image/1.1\\" xmlns:video=\\"http://www.google.com/schemas/sitemap-video/1.1\\"><url><loc>Rhabarber</loc></url><url><loc>Rucola</loc></url></urlset>",
  "<?xml version=\\"1.0\\"?><urlset xmlns=\\"http://www.sitemaps.org/schemas/sitemap/0.9\\" xmlns:image=\\"http://www.google.com/schemas/sitemap-image/1.1\\" xmlns:video=\\"http://www.google.com/schemas/sitemap-video/1.1\\"><url><loc>Skoda</loc></url><url><loc>Petersilie</loc></url></urlset>",
  "<?xml version=\\"1.0\\"?><urlset xmlns=\\"http://www.sitemaps.org/schemas/sitemap/0.9\\" xmlns:image=\\"http://www.google.com/schemas/sitemap-image/1.1\\" xmlns:video=\\"http://www.google.com/schemas/sitemap-video/1.1\\"><url><loc>Rindsgulasch</loc></url><url><loc>rrrbbbbB</loc></url></urlset>",
  "<?xml version=\\"1.0\\"?><urlset xmlns=\\"http://www.sitemaps.org/schemas/sitemap/0.9\\" xmlns:image=\\"http://www.google.com/schemas/sitemap-image/1.1\\" xmlns:video=\\"http://www.google.com/schemas/sitemap-video/1.1\\"><url><loc>aksjaskjf</loc></url></urlset>",
]
`;

exports[`SitemapGenerator module should run without errors 7`] = `
Array [
  "<?xml version=\\"1.0\\"?><urlset xmlns=\\"http://www.sitemaps.org/schemas/sitemap/0.9\\" xmlns:image=\\"http://www.google.com/schemas/sitemap-image/1.1\\" xmlns:video=\\"http://www.google.com/schemas/sitemap-video/1.1\\"><url><loc>Rhabarber</loc></url></urlset>",
  "<?xml version=\\"1.0\\"?><urlset xmlns=\\"http://www.sitemaps.org/schemas/sitemap/0.9\\" xmlns:image=\\"http://www.google.com/schemas/sitemap-image/1.1\\" xmlns:video=\\"http://www.google.com/schemas/sitemap-video/1.1\\"><url><loc>Petersilie</loc></url></urlset>",
  "<?xml version=\\"1.0\\"?><urlset xmlns=\\"http://www.sitemaps.org/schemas/sitemap/0.9\\" xmlns:image=\\"http://www.google.com/schemas/sitemap-image/1.1\\" xmlns:video=\\"http://www.google.com/schemas/sitemap-video/1.1\\"><url><loc>Skoda</loc></url></urlset>",
  "<?xml version=\\"1.0\\"?><urlset xmlns=\\"http://www.sitemaps.org/schemas/sitemap/0.9\\" xmlns:image=\\"http://www.google.com/schemas/sitemap-image/1.1\\" xmlns:video=\\"http://www.google.com/schemas/sitemap-video/1.1\\"><url><loc>Rucola</loc></url></urlset>",
  "<?xml version=\\"1.0\\"?><urlset xmlns=\\"http://www.sitemaps.org/schemas/sitemap/0.9\\" xmlns:image=\\"http://www.google.com/schemas/sitemap-image/1.1\\" xmlns:video=\\"http://www.google.com/schemas/sitemap-video/1.1\\"><url><loc>Rindsgulasch</loc></url></urlset>",
  "<?xml version=\\"1.0\\"?><urlset xmlns=\\"http://www.sitemaps.org/schemas/sitemap/0.9\\" xmlns:image=\\"http://www.google.com/schemas/sitemap-image/1.1\\" xmlns:video=\\"http://www.google.com/schemas/sitemap-video/1.1\\"><url><loc>rrrbbbbB</loc></url></urlset>",
  "<?xml version=\\"1.0\\"?><urlset xmlns=\\"http://www.sitemaps.org/schemas/sitemap/0.9\\" xmlns:image=\\"http://www.google.com/schemas/sitemap-image/1.1\\" xmlns:video=\\"http://www.google.com/schemas/sitemap-video/1.1\\"><url><loc>aksjaskjf</loc></url></urlset>",
]
`;
